<resources>

    <string name="app_name">Beer Collection</string>

    <!-- Tritre des activités -->
    <string name="title_activity_login">Se Connecter</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_menu_p">Menu Principal</string>
    <string name="title_activity_collection">Votre collection</string>
    <string name="title_activity_profil">Votre profil</string>
    <string name="title_activity_scan">Scan</string>
    <string name="title_activity_bon_plan">Les Bons Plans</string>
    <string name="title_activity_profil_biere">Profil d\'une bière</string>
    <string name="title_activity_profil_ami">Profil d\'un ami</string>

    <!-- Textes Connexion - Inscription -->
    <string name="texte_mdp">Mot de passe : </string>
    <string name="texte_login">Nom de profil : </string>
    <string name="hint_mdp">Mot de passe</string>
    <string name="hint_login">Nom de profil</string>
    <string name="texte_connexion">Je suis déjà Collectionneur!</string>
    <string name="btn_seConnecter">Se connecter</string>
    <string name="texte_inscription">Devenir Collectionneur!</string>
    <string name="texte_intro">Beer Collection est une application qui permet</string>
    <string name="texte_PasDeCompte">Vous n\'êtes pas encore collectionneur?</string>
    <string name="texte_description">Description :</string>
    <string name="texte_mail">Adresse mail :</string>
    <string name="hint_mail">ex : toto@BCollection.com</string>

    <!-- Textes bouton divers -->
    <string name="btn_valider">Valider</string>
    <string name="btn_retour">Retour</string>

    <!-- Textes Profil d'une bière -->
    <string name="texte_type">Type : </string>
    <string name="texte_note">Notes : </string>
    <string name="btn_suppresionColl">Retirer de ma collection</string>
    <string name="btn_AjoutColl">Ajouter à ma collection</string>
    <string name="texte_introuvable">N/A</string>
    <string name="texte_noteGlobal">Note globale : </string>
    <string name="texte_notePer">Note personnelle : </string>
    <string name="texte_dateBu">Vous avez consommé cette bière le </string>

    <string name="intro">Le scan de notre application est très précis veuillez respecter ces règles pour
    pouvoir avoir une occurence en base de données.

    \n\n1) Lancer l\'appareil photo !
    \n\n2) Placer la bouteille à environ 20 cm de l\'objectif
    \n\n3) Veuillez bien centrer l\'appareil au milieu de l\'étiquette de votre bière
    \n\n4) Prenez la photo
    \n\n5) Découper la photo avec l\'outil proposé. Afin de n\'avoir que l\'étiquette, centrer le carré
    \n\n6) Valider.
    \n\n7) Lancer le scan ! </string>
    <string name="picture">Picture</string>
    <string name="capture">Lancer l\'appareil photo!</string>
    <string name="scan_btn">Lancer le scan!</string>

    <!-- Fonts -->
    <string name="font_path">fonts/maxwell.bold.tff</string>

    <string-array name="nav_drawer_items">
        <item>Scan</item>
        <item>Collection</item>
        <item>Bons Plans</item>
        <item>Compte</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sip">SIP</string>
    <string name="title_activity_phone">PhoneA</string>
    <string name="title_activity_beer_map">Map</string>

</resources>
