<<<<<<< HEAD
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
=======
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> android_login
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="socialbeerproject.appas.Inscription">
<<<<<<< HEAD
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titreI"
            style="@style/Titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_inscription"
            android:layout_alignParentTop="true" />

        <TextView
            style="@style/SimpleTexte"
            android:id="@+id/texte_utilisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texte_login"
            android:layout_below="@+id/titreI"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <EditText
            style="@style/ChampsUneLigne"
            android:id="@+id/champ_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_login"
            android:layout_below="@+id/texte_utilisateur"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" >
            <requestFocus />
        </EditText>

        <TextView
            style="@style/SimpleTexte"
            android:id="@+id/texte_motDePasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/texte_mdp"
            android:layout_below="@+id/champ_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            style="@style/ChampsUneLigne"
            android:id="@+id/champ_mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_mdp"
            android:inputType="textPassword"
            android:layout_below="@+id/texte_motDePasse"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <TextView
            style="@style/SimpleTexte"
            android:id="@+id/texte_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/texte_mail"
            android:layout_below="@+id/champ_mdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            style="@style/ChampsUneLigne"
            android:id="@+id/champ_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/texte_mail" />

        <Button
            style="@style/GrosBouton"
            android:id="@+id/btn_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_valider"
            android:layout_below="@+id/champ_mail"
            android:layout_marginTop="20dp" />

        <Button
            style="@style/GrosBouton"
            android:id="@+id/btn_A_SeConnecter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texte_connexion"
            android:layout_below="@+id/btn_confirmation"
            android:layout_marginTop="30dp" />

    </LinearLayout>
</ScrollView>
=======

    <TextView
        android:id="@+id/titreI"
        style="@style/Titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_inscription"
        android:layout_alignParentTop="true" />

    <TextView
        style="@style/SimpleTexte"
        android:id="@+id/texte_utilisateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texte_login"
        android:layout_below="@+id/titreI"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        style="@style/ChampsUneLigne"
        android:id="@+id/champ_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_login"
        android:layout_below="@+id/texte_utilisateur"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >
        <requestFocus />
    </EditText>

    <TextView
        style="@style/SimpleTexte"
        android:id="@+id/texte_motDePasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texte_mdp"
        android:layout_below="@+id/champ_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        style="@style/ChampsUneLigne"
        android:id="@+id/champ_mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_mdp"
        android:layout_below="@+id/texte_motDePasse"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        style="@style/SimpleTexte"
        android:id="@+id/texte_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texte_mail"
        android:layout_below="@+id/champ_mdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        style="@style/ChampsUneLigne"
        android:id="@+id/champ_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_mail"
        android:layout_below="@+id/texte_mail" />

    <Button
        style="@style/GrosBouton"
        android:id="@+id/confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_valider"
        android:layout_below="@+id/champ_mail"
        android:layout_marginTop="20dp" />

    <Button
        style="@style/GrosBouton"
        android:id="@+id/btn_A_SeConnecter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texte_connexion"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
>>>>>>> android_login
