<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:id="@+id/rel_profilBiere"
        android:padding="10dp">

        <Button
            style="@style/GrosBouton"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_retour"
            android:id="@+id/button_Retour"
            android:layout_alignParentTop="true" />

        <TextView
            style="@style/Titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="La bière de l&apos;ours"
            android:id="@+id/textView_ProfilBiere_Title"
            android:layout_toRightOf="@+id/button_Retour"
            android:layout_centerHorizontal="true"/>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scroll_images_biere"
            android:layout_below="@+id/textView_ProfilBiere_Title"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:background="@drawable/menu_item">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView_Bouteille"
                    android:src="@drawable/test2"
                    android:adjustViewBounds="true"
                    android:maxWidth="500dp"
                    android:maxHeight="200dp"
                    android:scaleType="fitCenter" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView_Etiquette"
                    android:src="@drawable/test2"
                    android:adjustViewBounds="true"
                    android:maxWidth="500dp"
                    android:maxHeight="200dp"
                    android:scaleType="fitCenter"/>
            </LinearLayout>
        </HorizontalScrollView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scroll_images_biere"
            android:id="@+id/relative_note_biere"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texte_note"
                android:id="@+id/textView_note_biere" />

            <ProgressBar
                android:id="@+id/RatingGlo_biere"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_note_biere"
                android:progressDrawable="@drawable/progress_bar"
                android:layout_margin="5dp"
                android:progress="50" />
            <TextView
                android:id="@+id/texte_prog_ratingGlo"
                android:text="@string/texte_noteGlobal"
                android:gravity="center"
                android:layout_alignLeft="@id/RatingGlo_biere"
                android:layout_alignTop="@id/RatingGlo_biere"
                android:layout_alignRight="@id/RatingGlo_biere"
                android:layout_alignBottom="@id/RatingGlo_biere"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:id="@+id/RatingPer_biere"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RatingGlo_biere"
                android:progressDrawable="@drawable/progress_bar"
                android:layout_margin="5dp"
                android:progress="95" />

            <TextView
                android:id="@+id/texte_prog_ratingPer"
                android:text="@string/texte_notePer"
                android:gravity="center"
                android:layout_alignLeft="@id/RatingPer_biere"
                android:layout_alignTop="@id/RatingPer_biere"
                android:layout_alignRight="@id/RatingPer_biere"
                android:layout_alignBottom="@id/RatingPer_biere"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative_desc_biere"
            android:layout_below="@+id/relative_note_biere"
            android:padding="5dp"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Brasserie de L&apos;ours"
                android:id="@+id/textView_brasserie_biere"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/textView_alcool_biere"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textView_brasserie_biere"
                android:textStyle="bold"
                android:text="@string/texte_introuvable"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/textView_typeTexte_biere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Type : "
                android:layout_below="@+id/textView_brasserie_biere"
                android:layout_marginBottom="10dp" />
            <TextView
                android:id="@+id/textView_types_biere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texte_introuvable"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/textView_typeTexte_biere"
                android:layout_below="@+id/textView_brasserie_biere"/>

            <TextView
                android:id="@+id/textView_couleurTexte_biere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Couleur : "
                android:layout_below="@+id/textView_types_biere"
                android:layout_marginBottom="10dp" />
            <TextView
                android:id="@+id/textView_couleur_biere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texte_introuvable"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/textView_couleurTexte_biere"
                android:layout_below="@+id/textView_types_biere"/>
            <TextView
                android:id="@+id/textView_descriptionTexte_biere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Description : "
                android:layout_below="@+id/textView_couleur_biere"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/textView_description_biere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/texte_introuvable"
                android:textStyle="bold"
                android:layout_below="@+id/textView_descriptionTexte_biere"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>
        <Button
            android:id="@+id/button_ajouterColl_biere"
            style="@style/GrosBouton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ajouter à ma collection"
            android:layout_below="@+id/relative_desc_biere"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_ajouterColl_biere"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/texte_nbConsommateur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texte_introuvable"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" sont déja consommateur!"
                android:layout_toRightOf="@+id/texte_nbConsommateur"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>